<resources>
    <string name="app_name">DrivingApp</string>

    <string name="Trainer">Instructor</string>
    <string name="PreviousTrainee">Previous\nTrainee"</string>
    <string name="NewTrainee">New Trainee</string>
    <string name="Username">\tYour name</string>
    <string name="EmailAddress">\tEmail Address</string>
    <string name="Age">\tAge</string>
    <string name="MobileNumber">\tMobile Number</string>
    <string name="Gender">"  "Gender</string>
    <string name="Password">\tPassword</string>
    <string name="Login">Login</string>
    <string name="CreateAccountSignUp">Don\'t have an account ? signUp</string>
    <string name="contentDescriptionLogo">Logo Image</string>
    <string name="signUp">signUp</string>
    <string name="AlreadyHaveAccount">Already have an account ?</string>
    <string name="VehicleType">\tVehicle Type</string>
    <string name="Automatic">Automatic</string>
    <string name="Manual">Manual</string>
    <string name="PaymentMethod">\tPayment Method</string>
    <string name="ByHours">By Hours</string>
    <string name="Contract">Contract</string>
    <string name="CivilNo">\tCivil No</string>
    <string name="DrivingLicense">\t Learner License Booklet NO</string>
    <string name="CarNo">\tVehicle Plate</string>
    <string name="TrainerName">Trainer Name</string>
    <string name="CarType">\tVehicle Type</string>
    <string name="EvaluationsNo">(0)</string>
    <string name="gearup">GearUp</string>
    <string name="gear_up_to_drive">Gear Up to drive</string>
    <string name="training_area">Training Area:</string>
    <string name="age_between">Age: Between</string>
    <string name="and">and</string>
    <string name="gender">Gender:</string>
    <string name="contract_type">Contract Type:</string>
    <string name="language">Language:</string>
    <string name="get_list_of_instructors">Get list of instructors</string>
    <string name="my_instructors">My Instructors</string>
    <string name="instructor_s_name">Instructor\'s name</string>
    <string name="drums_test">Drums test</string>
    <string name="slope_test">Slope test</string>
    <string name="road_test">Road test</string>

    <string name="appbar_scrolling_view_behavior" translatable="false">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="search_by_name">Search by name</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="verification_code">Verification Code</string>

    <string-array name="contractTypes_array">
        <item>By hours</item>
        <item>By duration</item>
    </string-array>

    <string-array name="vehicleTypes_array">
        <item>Automatic</item>
        <item>Manual</item>
    </string-array>


</resources>
