<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="worldontheotherside.wordpress.com.drvingapp.LoginActivity">


    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:id="@+id/imageViewLogo"
        android:contentDescription="@string/contentDescriptionLogo"
        android:background="@drawable/ic_logo"
        android:layout_above="@+id/editTextEmail"
        android:layout_centerHorizontal="true" />

    <AutoCompleteTextView
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:id="@+id/editTextEmail"
        android:drawableStart="@drawable/ic_email"
        android:hint="@string/EmailAddress"
        android:layout_marginEnd="70dp"
        android:layout_above="@+id/editTextPassword"
        android:layout_centerHorizontal="true"
        android:textSize="16sp"
        android:inputType="text"
        android:layout_marginStart="15dp"
        android:maxLines="1"

        />

    <EditText
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:id="@+id/editTextPassword"
        android:hint="@string/Password"
        android:drawableStart="@drawable/ic_pass"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="181dp"
        android:inputType="textPassword"
        android:textSize="16sp"
        android:maxLines="1"
        />

    <Button
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:text="@string/Login"
        android:id="@+id/buttonLogin"
        android:layout_alignTop="@+id/editTextPassword"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="69dp"
        android:textColor="#fef4f4"
        android:background="#9D3F3F"
        android:onClick="loginAction"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/CreateAccountSignUp"
        android:id="@+id/textViewCreateAccountSignup"
        android:layout_below="@+id/buttonLogin"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="45dp"
        />


</RelativeLayout>
