<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="worldontheotherside.wordpress.com.drvingapp.StartActivity">

    <ImageView
        android:id="@+id/imageViewBackground"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@android:color/background_light"
        android:scaleType="center"
        android:tint="@color/text_color"
        android:tintMode="multiply"
        app:srcCompat="@drawable/ic_logo" />

    <TextView
        android:id="@+id/textViewGearUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/gearup"
        android:textColor="#cf8b8b"
        android:textSize="40dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textViewSubtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textViewGearUp"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:text="@string/gear_up_to_drive"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="20dp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/circle_button"
        android:text="@string/Login"
        android:textColor="@android:color/white"
        android:textSize="24dp"
        android:layout_margin="10dp"
        android:layout_above="@+id/textViewSignup"
        android:onClick="goToAction"/>

    <TextView
        android:id="@+id/textViewSignup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/imageViewBackground"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="30dp"
        android:text="@string/CreateAccountSignUp"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="18dp"
        android:textStyle="bold"
        android:onClick="goToAction"/>
</RelativeLayout>
