<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="worldontheotherside.wordpress.com.drvingapp.HomeActivity">


    <TextView
        android:id="@+id/textViewGearUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/gearup"
        android:textColor="@color/colorPrimary"
        android:textSize="40dp"
        android:textStyle="bold"
        android:layout_marginTop="20dp"/>

    <TextView
        android:id="@+id/textViewSubtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/gear_up_to_drive"
        android:textAllCaps="true"
        android:textColor="@android:color/black"
        android:textSize="20dp"
        android:textStyle="bold"
        android:layout_marginBottom="20dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textViewTrainingArea"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/training_area"
            android:textColor="@android:color/black"
            android:textSize="16dp" />

        <Spinner
            android:id="@+id/spinnerTrainingAreas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textViewAge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/age_between"
            android:textColor="@android:color/black"
            android:textSize="16dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"/>

        <EditText
            android:id="@+id/editTextAgeFrom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:textSize="16dp"
            android:ems="4"/>

        <TextView
            android:id="@+id/textViewAnd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/and"
            android:textColor="@android:color/black"
            android:textSize="16dp" />

        <EditText
            android:id="@+id/editTextAgeTo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:textSize="16dp"
            android:ems="4"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textViewGender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/gender"
            android:textColor="@android:color/black"
            android:textSize="16dp"
            android:layout_weight="1"/>

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/radioGroupGender"
            android:layout_weight="1">

            <RadioButton
                android:id="@+id/radioButtonFemale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableStart="@drawable/ic_female"
                android:layout_marginRight="5dp"
                android:layout_marginLeft="5dp"/>

            <RadioButton
                android:id="@+id/radioButtonMale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableStart="@drawable/ic_male"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"/>
        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textViewContractType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/contract_type"
            android:textColor="@android:color/black"
            android:textSize="16dp"
            android:layout_weight="1"/>

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/radioGroupContractType"
            android:layout_weight="1">

            <RadioButton
                android:id="@+id/radioButtonHour"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="25dp"
                android:layout_weight="1"
                android:drawableStart="@drawable/ic_hour" />

            <RadioButton
                android:id="@+id/radioButtonPeriod"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="30dp"
                android:layout_weight="1"
                android:drawableStart="@drawable/ic_period" />

        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="15dp">

        <TextView
            android:id="@+id/textViewLanguage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/language"
            android:textColor="@android:color/black"
            android:textSize="16dp" />

        <Spinner
            android:id="@+id/spinnerLanguages"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"/>

    </LinearLayout>

    <Button
        android:id="@+id/buttonGetInstructors"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
       android:paddingRight="10dp"
        android:paddingLeft="10dp"
        android:background="@color/colorPrimary"
        android:text="@string/get_list_of_instructors"
        android:textColor="@android:color/white"
        android:textSize="16dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="10dp"
        android:onClick="getInstructorsAction"/>

    <TextView
        android:id="@+id/textViewMyInstructors"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/my_instructors"
        android:textColor="@android:color/black"
        android:textSize="16dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp" />

    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_marginLeft="10dp"
        android:id="@+id/recyclerViewMyInstructors"/>
</LinearLayout>
