<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >



        <android.support.v7.widget.CardView
            android:id="@+id/card_View"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical|center_horizontal">


            <ImageView
                android:id="@+id/imageViewTrainer"
                android:layout_width="100dp"
                android:layout_height="100dp"
                app:srcCompat="@drawable/ic_username"
                android:adjustViewBounds="true"
                android:scaleType="fitCenter"
                android:maxWidth="100dp"
                android:maxHeight="100dp"
                android:layout_margin="4dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textViewTrainerName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/TrainerName"
                        android:textSize="20sp"/>

                    <Button
                        android:layout_width="100dp"
                        android:layout_height="30dp"
                        android:text="Book"
                        android:id="@+id/buttonLogin"
                        android:textColor="#fef4f4"
                        android:background="#9D3F3F"
                        android:layout_marginLeft="35dp"
                        />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">


                <RatingBar
                    android:id="@+id/ratingBarTrainer"
                    style="@style/Widget.AppCompat.RatingBar.Small"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:isIndicator="true"
                    android:rating="5"
                    android:progressBackgroundTint="@android:color/darker_gray"
                    android:progressTint="@color/colorPrimary"
                    android:secondaryProgressTint="@color/colorPrimary"
                    android:paddingTop="10dp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/textViewEvaluationsNo"
                        android:text="@string/EvaluationsNo"
                        android:paddingTop="10dp"
                        android:paddingLeft="10dp"/>

                </LinearLayout>


            </LinearLayout>


            </LinearLayout>


            </android.support.v7.widget.CardView>



    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="115dp"
        style="@style/TabTheme"
        >


        <android.support.design.widget.TabLayout
            style="@style/TabTheme"
            app:tabTextAppearance="@style/AppTabTextAppearance"
            android:id="@+id/tabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:tabGravity="fill"
            app:tabMode="fixed"
            />
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/viewpagerTrainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"  />



</android.support.design.widget.CoordinatorLayout>
